--- a/MyWebsite/package.json
+++ b/MyWebsite/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@types/react-router": "^5.1.20",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
